//
// Copyright (c) 2025 Neo Qiss
// All rights reserved.
//
// This software is proprietary and confidential.
// Unauthorized copying, distribution, or use is strictly prohibited.
//

package com.timesocial.grpc;

import com.facebook.react.bridge.ReactApplicationContext;
import com.facebook.react.bridge.ReactContextBaseJavaModule;
import com.facebook.react.bridge.ReactMethod;
import com.facebook.react.bridge.Promise;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.bridge.WritableMap;
import com.facebook.react.bridge.Arguments;

import java.util.concurrent.ExecutorService;
import java.util.concurrent.Executors;

/**
 * React Native bridge module for Time gRPC services
 */
public class TimeGrpcReactModule extends ReactContextBaseJavaModule {
    
    private static final String MODULE_NAME = "TimeGrpcBridge";
    private TimeGrpcClient grpcClient;
    private final ExecutorService executor = Executors.newCachedThreadPool();
    
    public TimeGrpcReactModule(ReactApplicationContext reactContext) {
        super(reactContext);
    }
    
    @Override
    public String getName() {
        return MODULE_NAME;
    }
    
    @ReactMethod
    public void initializeClient(String host, int port, Promise promise) {
        try {
            TimeGrpcModule.Config config = new TimeGrpcModule.Config(host, port, false, 30);
            grpcClient = new TimeGrpcClient(config);
            
            WritableMap result = Arguments.createMap();
            result.putBoolean("success", true);
            result.putString("host", host);
            result.putInt("port", port);
            promise.resolve(result);
        } catch (Exception e) {
            promise.reject("INIT_ERROR", "Failed to initialize gRPC client", e);
        }
    }
    
    @ReactMethod
    public void healthCheck(Promise promise) {
        if (grpcClient == null) {
            promise.reject("CLIENT_NOT_INITIALIZED", "gRPC client not initialized");
            return;
        }
        
        executor.execute(() -> {
            try {
                boolean success = grpcClient.healthCheck();
                WritableMap result = Arguments.createMap();
                result.putBoolean("success", success);
                result.putString("status", success ? "OK" : "ERROR");
                promise.resolve(result);
            } catch (Exception e) {
                promise.reject("HEALTH_CHECK_ERROR", "Health check failed", e);
            }
        });
    }
    
    // Note Service Methods
    @ReactMethod
    public void createNote(ReadableMap requestData, Promise promise) {
        if (grpcClient == null) {
            promise.reject("CLIENT_NOT_INITIALIZED", "gRPC client not initialized");
            return;
        }
        
        executor.execute(() -> {
            try {
                // Extract parameters from requestData
                String authorId = requestData.getString("authorId");
                String text = requestData.getString("text");
                
                if (authorId == null || text == null) {
                    promise.reject("INVALID_REQUEST", "Missing required fields: authorId, text");
                    return;
                }
                
                // Create note request and call gRPC service
                // This would need to be implemented based on the actual protobuf definitions
                WritableMap result = Arguments.createMap();
                result.putBoolean("success", true);
                result.putString("noteId", "generated-note-id");
                promise.resolve(result);
            } catch (Exception e) {
                promise.reject("CREATE_NOTE_ERROR", "Failed to create note", e);
            }
        });
    }
    
    @ReactMethod
    public void getNote(ReadableMap requestData, Promise promise) {
        if (grpcClient == null) {
            promise.reject("CLIENT_NOT_INITIALIZED", "gRPC client not initialized");
            return;
        }
        
        executor.execute(() -> {
            try {
                String noteId = requestData.getString("noteId");
                String requestingUserId = requestData.getString("requestingUserId");
                
                if (noteId == null || requestingUserId == null) {
                    promise.reject("INVALID_REQUEST", "Missing required fields: noteId, requestingUserId");
                    return;
                }
                
                // Call gRPC service to get note
                WritableMap result = Arguments.createMap();
                result.putBoolean("success", true);
                result.putString("noteId", noteId);
                promise.resolve(result);
            } catch (Exception e) {
                promise.reject("GET_NOTE_ERROR", "Failed to get note", e);
            }
        });
    }
    
    // User Service Methods
    @ReactMethod
    public void loginUser(ReadableMap requestData, Promise promise) {
        if (grpcClient == null) {
            promise.reject("CLIENT_NOT_INITIALIZED", "gRPC client not initialized");
            return;
        }
        
        executor.execute(() -> {
            try {
                String email = requestData.getString("email");
                String password = requestData.getString("password");
                
                if (email == null || password == null) {
                    promise.reject("INVALID_REQUEST", "Missing required fields: email, password");
                    return;
                }
                
                // Call gRPC service to login user
                WritableMap result = Arguments.createMap();
                result.putBoolean("success", true);
                result.putString("accessToken", "mock-token");
                promise.resolve(result);
            } catch (Exception e) {
                promise.reject("LOGIN_ERROR", "Failed to login user", e);
            }
        });
    }
    
    @ReactMethod
    public void registerUser(ReadableMap requestData, Promise promise) {
        if (grpcClient == null) {
            promise.reject("CLIENT_NOT_INITIALIZED", "gRPC client not initialized");
            return;
        }
        
        executor.execute(() -> {
            try {
                String username = requestData.getString("username");
                String email = requestData.getString("email");
                String password = requestData.getString("password");
                String displayName = requestData.getString("displayName");
                
                if (username == null || email == null || password == null || displayName == null) {
                    promise.reject("INVALID_REQUEST", "Missing required fields: username, email, password, displayName");
                    return;
                }
                
                // Call gRPC service to register user
                WritableMap result = Arguments.createMap();
                result.putBoolean("success", true);
                result.putString("userId", "generated-user-id");
                promise.resolve(result);
            } catch (Exception e) {
                promise.reject("REGISTER_ERROR", "Failed to register user", e);
            }
        });
    }
    
    // Fanout Service Methods
    @ReactMethod
    public void initiateFanout(ReadableMap requestData, Promise promise) {
        if (grpcClient == null) {
            promise.reject("CLIENT_NOT_INITIALIZED", "gRPC client not initialized");
            return;
        }
        
        executor.execute(() -> {
            try {
                String noteId = requestData.getString("noteId");
                String userId = requestData.getString("userId");
                
                if (noteId == null || userId == null) {
                    promise.reject("INVALID_REQUEST", "Missing required fields: noteId, userId");
                    return;
                }
                
                // Call gRPC service to initiate fanout
                WritableMap result = Arguments.createMap();
                result.putBoolean("success", true);
                result.putString("jobId", "generated-job-id");
                promise.resolve(result);
            } catch (Exception e) {
                promise.reject("INITIATE_FANOUT_ERROR", "Failed to initiate fanout", e);
            }
        });
    }
    
    @ReactMethod
    public void getFanoutJobStatus(ReadableMap requestData, Promise promise) {
        if (grpcClient == null) {
            promise.reject("CLIENT_NOT_INITIALIZED", "gRPC client not initialized");
            return;
        }
        
        executor.execute(() -> {
            try {
                String jobId = requestData.getString("jobId");
                
                if (jobId == null) {
                    promise.reject("INVALID_REQUEST", "Missing required field: jobId");
                    return;
                }
                
                // Call gRPC service to get fanout job status
                WritableMap result = Arguments.createMap();
                result.putBoolean("success", true);
                result.putString("status", "RUNNING");
                result.putInt("progress", 50);
                promise.resolve(result);
            } catch (Exception e) {
                promise.reject("GET_FANOUT_STATUS_ERROR", "Failed to get fanout status", e);
            }
        });
    }
    
    // Messaging Service Methods
    @ReactMethod
    public void sendMessage(ReadableMap requestData, Promise promise) {
        if (grpcClient == null) {
            promise.reject("CLIENT_NOT_INITIALIZED", "gRPC client not initialized");
            return;
        }
        
        executor.execute(() -> {
            try {
                String senderId = requestData.getString("senderId");
                String recipientId = requestData.getString("recipientId");
                String content = requestData.getString("content");
                
                if (senderId == null || recipientId == null || content == null) {
                    promise.reject("INVALID_REQUEST", "Missing required fields: senderId, recipientId, content");
                    return;
                }
                
                // Call gRPC service to send message
                WritableMap result = Arguments.createMap();
                result.putBoolean("success", true);
                result.putString("messageId", "generated-message-id");
                promise.resolve(result);
            } catch (Exception e) {
                promise.reject("SEND_MESSAGE_ERROR", "Failed to send message", e);
            }
        });
    }
    
    @ReactMethod
    public void getMessages(ReadableMap requestData, Promise promise) {
        if (grpcClient == null) {
            promise.reject("CLIENT_NOT_INITIALIZED", "gRPC client not initialized");
            return;
        }
        
        executor.execute(() -> {
            try {
                String userId = requestData.getString("userId");
                String chatId = requestData.getString("chatId");
                
                if (userId == null || chatId == null) {
                    promise.reject("INVALID_REQUEST", "Missing required fields: userId, chatId");
                    return;
                }
                
                // Call gRPC service to get messages
                WritableMap result = Arguments.createMap();
                result.putBoolean("success", true);
                result.putArray("messages", Arguments.createArray());
                result.putBoolean("hasMore", false);
                promise.resolve(result);
            } catch (Exception e) {
                promise.reject("GET_MESSAGES_ERROR", "Failed to get messages", e);
            }
        });
    }
    
    // Search Service Methods
    @ReactMethod
    public void searchUsers(ReadableMap requestData, Promise promise) {
        if (grpcClient == null) {
            promise.reject("CLIENT_NOT_INITIALIZED", "gRPC client not initialized");
            return;
        }
        
        executor.execute(() -> {
            try {
                String query = requestData.getString("query");
                
                if (query == null) {
                    promise.reject("INVALID_REQUEST", "Missing required field: query");
                    return;
                }
                
                // Call gRPC service to search users
                WritableMap result = Arguments.createMap();
                result.putBoolean("success", true);
                result.putArray("users", Arguments.createArray());
                result.putBoolean("hasMore", false);
                promise.resolve(result);
            } catch (Exception e) {
                promise.reject("SEARCH_USERS_ERROR", "Failed to search users", e);
            }
        });
    }
    
    @ReactMethod
    public void searchNotes(ReadableMap requestData, Promise promise) {
        if (grpcClient == null) {
            promise.reject("CLIENT_NOT_INITIALIZED", "gRPC client not initialized");
            return;
        }
        
        executor.execute(() -> {
            try {
                String query = requestData.getString("query");
                
                if (query == null) {
                    promise.reject("INVALID_REQUEST", "Missing required field: query");
                    return;
                }
                
                // Call gRPC service to search notes
                WritableMap result = Arguments.createMap();
                result.putBoolean("success", true);
                result.putArray("notes", Arguments.createArray());
                result.putBoolean("hasMore", false);
                promise.resolve(result);
            } catch (Exception e) {
                promise.reject("SEARCH_NOTES_ERROR", "Failed to search notes", e);
            }
        });
    }
    
    // Drafts Service Methods
    @ReactMethod
    public void createDraft(ReadableMap requestData, Promise promise) {
        if (grpcClient == null) {
            promise.reject("CLIENT_NOT_INITIALIZED", "gRPC client not initialized");
            return;
        }
        
        executor.execute(() -> {
            try {
                String userId = requestData.getString("userId");
                String content = requestData.getString("content");
                
                if (userId == null || content == null) {
                    promise.reject("INVALID_REQUEST", "Missing required fields: userId, content");
                    return;
                }
                
                // Call gRPC service to create draft
                WritableMap result = Arguments.createMap();
                result.putBoolean("success", true);
                result.putString("draftId", "generated-draft-id");
                promise.resolve(result);
            } catch (Exception e) {
                promise.reject("CREATE_DRAFT_ERROR", "Failed to create draft", e);
            }
        });
    }
    
    @ReactMethod
    public void getUserDrafts(ReadableMap requestData, Promise promise) {
        if (grpcClient == null) {
            promise.reject("CLIENT_NOT_INITIALIZED", "gRPC client not initialized");
            return;
        }
        
        executor.execute(() -> {
            try {
                String userId = requestData.getString("userId");
                
                if (userId == null) {
                    promise.reject("INVALID_REQUEST", "Missing required field: userId");
                    return;
                }
                
                // Call gRPC service to get user drafts
                WritableMap result = Arguments.createMap();
                result.putBoolean("success", true);
                result.putArray("drafts", Arguments.createArray());
                result.putBoolean("hasMore", false);
                promise.resolve(result);
            } catch (Exception e) {
                promise.reject("GET_USER_DRAFTS_ERROR", "Failed to get user drafts", e);
            }
        });
    }
    
    // List Service Methods
    @ReactMethod
    public void createList(ReadableMap requestData, Promise promise) {
        if (grpcClient == null) {
            promise.reject("CLIENT_NOT_INITIALIZED", "gRPC client not initialized");
            return;
        }
        
        executor.execute(() -> {
            try {
                String userId = requestData.getString("userId");
                String name = requestData.getString("name");
                
                if (userId == null || name == null) {
                    promise.reject("INVALID_REQUEST", "Missing required fields: userId, name");
                    return;
                }
                
                // Call gRPC service to create list
                WritableMap result = Arguments.createMap();
                result.putBoolean("success", true);
                result.putString("listId", "generated-list-id");
                promise.resolve(result);
            } catch (Exception e) {
                promise.reject("CREATE_LIST_ERROR", "Failed to create list", e);
            }
        });
    }
    
    @ReactMethod
    public void getUserLists(ReadableMap requestData, Promise promise) {
        if (grpcClient == null) {
            promise.reject("CLIENT_NOT_INITIALIZED", "gRPC client not initialized");
            return;
        }
        
        executor.execute(() -> {
            try {
                String userId = requestData.getString("userId");
                
                if (userId == null) {
                    promise.reject("INVALID_REQUEST", "Missing required field: userId");
                    return;
                }
                
                // Call gRPC service to get user lists
                WritableMap result = Arguments.createMap();
                result.putBoolean("success", true);
                result.putArray("lists", Arguments.createArray());
                result.putBoolean("hasMore", false);
                promise.resolve(result);
            } catch (Exception e) {
                promise.reject("GET_USER_LISTS_ERROR", "Failed to get user lists", e);
            }
        });
    }
    
    // Starterpack Service Methods
    @ReactMethod
    public void createStarterpack(ReadableMap requestData, Promise promise) {
        if (grpcClient == null) {
            promise.reject("CLIENT_NOT_INITIALIZED", "gRPC client not initialized");
            return;
        }
        
        executor.execute(() -> {
            try {
                String userId = requestData.getString("userId");
                String name = requestData.getString("name");
                
                if (userId == null || name == null) {
                    promise.reject("INVALID_REQUEST", "Missing required fields: userId, name");
                    return;
                }
                
                // Call gRPC service to create starterpack
                WritableMap result = Arguments.createMap();
                result.putBoolean("success", true);
                result.putString("starterpackId", "generated-starterpack-id");
                promise.resolve(result);
            } catch (Exception e) {
                promise.reject("CREATE_STARTERPACK_ERROR", "Failed to create starterpack", e);
            }
        });
    }
    
    @ReactMethod
    public void getUserStarterpacks(ReadableMap requestData, Promise promise) {
        if (grpcClient == null) {
            promise.reject("CLIENT_NOT_INITIALIZED", "gRPC client not initialized");
            return;
        }
        
        executor.execute(() -> {
            try {
                String userId = requestData.getString("userId");
                
                if (userId == null) {
                    promise.reject("INVALID_REQUEST", "Missing required field: userId");
                    return;
                }
                
                // Call gRPC service to get user starterpacks
                WritableMap result = Arguments.createMap();
                result.putBoolean("success", true);
                result.putArray("starterpacks", Arguments.createArray());
                result.putBoolean("hasMore", false);
                promise.resolve(result);
            } catch (Exception e) {
                promise.reject("GET_USER_STARTERPACKS_ERROR", "Failed to get user starterpacks", e);
            }
        });
    }
}